--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@ h2{
 
 section, 
 header,
-footer{
+footer,
+figure{
       display: flex;
       flex-direction: column;
       align-items: center; 
