--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body{
       flex-direction: column;
       align-items: center;
     }
-span{
+h6{
       color:rgba(161, 151, 151, 0.555);
     }
 header{
